@@ -1,3 +1,3 @@
 MAJOR_VERSION=1
 MINOR_VERSION=1
-SUBMINOR_VERSION=6
+SUBMINOR_VERSION=6b3
